--- a/public/capturar.html
+++ b/public/capturar.html
@@ -6,22 +6,22 @@
   <title>Capturar Inventario</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin: 30px; }
-    form { background: #f9f9f9; padding: 20px; border: 1px solid #ccc; border-radius: 10px; display: inline-block; width: 95%; max-width: 400px; }
-    input, select, button { width: 90%; padding: 10px; margin: 10px 0; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
-    button { background-color: #e74c3c; color: white; border: none; cursor: pointer; }
+    form { display: inline-block; background: #f9f9f9; padding: 20px; border: 1px solid #ccc; border-radius: 10px; width: 90%; max-width: 400px; }
+    select, button { width: 90%; padding: 10px; margin: 10px 0; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
+    button { background-color: #e74c3c; color: white; cursor: pointer; border: none; }
     button:hover { background-color: #c0392b; }
-    #mensaje { margin-top: 20px; font-size: 16px; color: red; }
-    #loader { display: none; margin-top: 20px; }
-    footer { margin-top: 40px; font-size: 12px; color: gray; }
+    #mensaje { margin-top: 20px; font-size: 16px; }
+    #loader { display: none; margin-top: 20px; font-size: 14px; color: gray; }
+    .footer { margin-top: 40px; font-size: 12px; color: gray; }
   </style>
 </head>
 <body>
 
 <h2>Captura de Inventario</h2>
-<div id="horaFecha"></div>
+
+<div id="loader">Cargando datos...</div>
 
 <form id="formulario">
-  <input type="date" id="fecha" required><br>
   <select id="ubicacion" required>
     <option disabled selected>Selecciona Ubicación</option>
     <option value="Zapata">Zapata</option>
@@ -33,76 +33,88 @@
     <option value="Caja">Caja</option>
     <option value="Cocina">Cocina</option>
   </select><br>
-  <button type="submit">Validar y Continuar</button>
+  <button type="submit">Continuar</button>
+  <button type="button" onclick="location.href='index.html'">Regresar</button>
 </form>
 
 <div id="mensaje"></div>
-<div id="loader">Validando información...</div>
 
-<footer>
+<div class="footer">
   Aplicación para administración de inventarios para PYMES - Alejandro Ornelas - Orom Soluciones
-</footer>
+</div>
 
 <script>
-const server = "https://inventario-horom-production.up.railway.app";
+const SERVER = "https://inventario-horom-production.up.railway.app";
 
-// Verificar si está logueado
-const usuario = JSON.parse(localStorage.getItem("usuarioLogueado"));
-if (!usuario) {
-  window.location.href = "index.html";
+// Verificar si el usuario está logueado
+if (!localStorage.getItem("usuarioActivo")) {
+  window.location.href = "login.html";
 }
 
-// Mostrar hora y fecha actuales
-function actualizarHoraFecha() {
-  const ahora = new Date();
-  const opciones = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric', hour: '2-digit', minute: '2-digit' };
-  document.getElementById("horaFecha").textContent = `Fecha y hora actual: ${ahora.toLocaleDateString("es-MX", opciones)}`;
-}
-actualizarHoraFecha();
+let inventarios = [];
 
-// Validar formulario
-const formulario = document.getElementById("formulario");
-formulario.addEventListener("submit", async function(e) {
+async function cargarInventarios() {
+  try {
+    document.getElementById("loader").style.display = "block";
+    const res = await fetch(`${SERVER}/nombres`);
+    inventarios = await res.json();
+  } catch (error) {
+    console.error("Error al cargar inventarios:", error);
+  } finally {
+    document.getElementById("loader").style.display = "none";
+  }
+}
+
+cargarInventarios();
+
+
+// Evento para enviar el formulario
+
+const form = document.getElementById("formulario");
+form.addEventListener("submit", async (e) => {
   e.preventDefault();
 
-  const fecha = document.getElementById("fecha").value;
   const ubicacion = document.getElementById("ubicacion").value;
   const area = document.getElementById("area").value;
   const mensaje = document.getElementById("mensaje");
-  const loader = document.getElementById("loader");
 
-  if (!fecha || !ubicacion || !area) {
-    mensaje.textContent = "❌ Todos los campos son obligatorios.";
+  if (!ubicacion || !area) {
+    mensaje.style.color = "red";
+    mensaje.textContent = "❌ Debes seleccionar ubicación y área.";
     return;
   }
 
-  loader.style.display = "block";
-  mensaje.textContent = "";
+  // Obtenemos la fecha real ya ajustada desde el servidor local (según configuración)
+  const res = await fetch(`${SERVER}/fecha-ajustada`);
+  const data = await res.json();
+  const hoy = data.fecha;
 
-  try {
-    const res = await fetch(`${server}/nombres`);
-    const inventarios = await res.json();
+  // Validar si ya existe inventario
+  const existe = inventarios.find(inv => {
+    const fecha = new Date(inv.creadoEn).toISOString().split('T')[0];
+    return fecha === hoy && inv.ubicacion === ubicacion && inv.area === area;
+  });
 
-    const existe = inventarios.find(inv => {
-      const fechaInv = new Date(inv.creadoEn).toISOString().split('T')[0];
-      return fechaInv === fecha && inv.ubicacion === ubicacion && inv.area === area;
-    });
+  const datosPendientes = { ubicacion, area, fecha: hoy, usuario: localStorage.getItem("usuarioActivo") };
 
-    if (existe) {
-      alert("⚠️ Ya existe inventario para esa fecha, ubicación y área. Debes editar.");
+  if (existe) {
+    const confirmar = confirm("⚠️ Ya existe un inventario para esta fecha, ubicación y área. ¿Deseas modificar un artículo?");
+    if (confirmar) {
+      datosPendientes.id = existe._id;
+      datosPendientes.modoEdicion = true;
+      localStorage.setItem("tempDatos", JSON.stringify(datosPendientes));
+      window.location.href = "editar-item.html";
     } else {
-      localStorage.setItem("capturaDatos", JSON.stringify({ fecha, ubicacion, area }));
-      window.location.href = `${area.toLowerCase()}.html`;
+      mensaje.style.color = "red";
+      mensaje.textContent = "❌ No se seleccionó acción.";
     }
-  } catch (error) {
-    console.error(error);
-    mensaje.textContent = "❌ Error al validar datos.";
-  } finally {
-    loader.style.display = "none";
+  } else {
+    datosPendientes.modoEdicion = false;
+    localStorage.setItem("tempDatos", JSON.stringify(datosPendientes));
+    window.location.href = `${area.toLowerCase()}.html`;
   }
 });
 </script>
 
 </body>
 </html>
-
