--- a/public/capturar.html
+++ b/public/capturar.html
@@ -6,72 +6,59 @@
   <title>Capturar Inventario</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin: 30px; }
-    form { display: inline-block; background: #f9f9f9; padding: 20px; border: 1px solid #ccc; border-radius: 10px; width: 90%; max-width: 400px; }
-    select, button { width: 90%; padding: 10px; margin: 10px 0; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
+    form { background: #f9f9f9; padding: 20px; border: 1px solid #ccc; border-radius: 10px; display: inline-block; width: 100%; max-width: 400px; }
+    input, select, button { width: 90%; padding: 10px; margin: 10px 0; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
     button { background-color: #e74c3c; color: white; cursor: pointer; border: none; }
     button:hover { background-color: #c0392b; }
     #mensaje { margin-top: 20px; font-size: 16px; }
-    #loader { display: none; margin-top: 20px; font-size: 14px; color: gray; }
-    .footer { margin-top: 40px; font-size: 12px; color: gray; }
+    footer { margin-top: 40px; font-size: 12px; color: gray; }
+    #loader { display: none; margin-top: 15px; font-size: 14px; color: #555; }
+    @media (max-width: 600px) {
+      form { width: 95%; }
+      input, select, button { font-size: 14px; }
+    }
   </style>
 </head>
 <body>
 
-<h2>Captura de Inventario</h2>
+<h2>Capturar Inventario 📋</h2>
 
-<div id="loader">Cargando datos...</div>
+<div id="loader">Cargando datos, por favor espera...</div>
 
-<form id="formulario">
+<form id="formulario-capturar">
   <select id="ubicacion" required>
     <option disabled selected>Selecciona Ubicación</option>
     <option value="Zapata">Zapata</option>
     <option value="Anapra">Anapra</option>
   </select><br>
+
   <select id="area" required>
     <option disabled selected>Selecciona Área</option>
     <option value="Sushi">Sushi</option>
     <option value="Caja">Caja</option>
     <option value="Cocina">Cocina</option>
   </select><br>
+
   <button type="submit">Continuar</button>
-  <button type="button" onclick="location.href='index.html'">Regresar</button>
+  <button type="button" onclick="regresar()" style="background-color: gray;">Regresar</button>
 </form>
 
 <div id="mensaje"></div>
 
-<div class="footer">
-  Aplicación para administración de inventarios para PYMES - Alejandro Ornelas - Orom Soluciones
-</div>
+<footer>
+  Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
+</footer>
 
 <script>
 const SERVER = "https://inventario-horom-production.up.railway.app";
 
-// Verificar si el usuario está logueado
-if (!localStorage.getItem("usuarioActivo")) {
+// Validar que esté logueado
+if (!localStorage.getItem("usuarioLogueado")) {
   window.location.href = "login.html";
 }
 
-let inventarios = [];
-
-async function cargarInventarios() {
-  try {
-    document.getElementById("loader").style.display = "block";
-    const res = await fetch(`${SERVER}/nombres`);
-    inventarios = await res.json();
-  } catch (error) {
-    console.error("Error al cargar inventarios:", error);
-  } finally {
-    document.getElementById("loader").style.display = "none";
-  }
-}
-
-cargarInventarios();
-
-
-// Evento para enviar el formulario
-
-const form = document.getElementById("formulario");
-form.addEventListener("submit", async (e) => {
+// Evento del formulario
+document.getElementById("formulario-capturar").addEventListener("submit", async (e) => {
   e.preventDefault();
 
   const ubicacion = document.getElementById("ubicacion").value;
@@ -80,40 +67,64 @@ form.addEventListener("submit", async (e) => {
 
   if (!ubicacion || !area) {
     mensaje.style.color = "red";
-    mensaje.textContent = "❌ Debes seleccionar ubicación y área.";
+    mensaje.textContent = "❌ Selecciona ubicación y área.";
     return;
   }
 
-  // Obtenemos la fecha real ya ajustada desde el servidor local (según configuración)
-  const res = await fetch(`${SERVER}/fecha-ajustada`);
-  const data = await res.json();
-  const hoy = data.fecha;
+  const loader = document.getElementById("loader");
+  loader.style.display = "block";
 
-  // Validar si ya existe inventario
-  const existe = inventarios.find(inv => {
-    const fecha = new Date(inv.creadoEn).toISOString().split('T')[0];
-    return fecha === hoy && inv.ubicacion === ubicacion && inv.area === area;
-  });
+  try {
+    const res = await fetch(`${SERVER}/nombres`);
+    const inventarios = await res.json();
 
-  const datosPendientes = { ubicacion, area, fecha: hoy, usuario: localStorage.getItem("usuarioActivo") };
+    const hoy = new Date(new Date().getTime() + (parseInt(localStorage.getItem("ajusteHorario") || 0) * 3600000));
+    const hoyFormato = hoy.toISOString().split('T')[0];
 
-  if (existe) {
-    const confirmar = confirm("⚠️ Ya existe un inventario para esta fecha, ubicación y área. ¿Deseas modificar un artículo?");
-    if (confirmar) {
-      datosPendientes.id = existe._id;
-      datosPendientes.modoEdicion = true;
-      localStorage.setItem("tempDatos", JSON.stringify(datosPendientes));
-      window.location.href = "editar-item.html";
+    const existe = inventarios.find(inv => {
+      const fecha = new Date(inv.creadoEn).toISOString().split('T')[0];
+      return fecha === hoyFormato && inv.ubicacion === ubicacion && inv.area === area;
+    });
+
+    const datosPendientes = {
+      usuario: localStorage.getItem("usuarioLogueado"),
+      ubicacion,
+      area,
+    };
+
+    if (existe) {
+      if (confirm("⚠️ Ya existe inventario para hoy en esta ubicación y área. ¿Deseas modificar algún artículo?")) {
+        datosPendientes.id = existe._id;
+        datosPendientes.modoEdicion = true;
+        localStorage.setItem("tempDatos", JSON.stringify(datosPendientes));
+        window.location.href = "editar-item.html";
+      } else {
+        loader.style.display = "none";
+      }
     } else {
-      mensaje.style.color = "red";
-      mensaje.textContent = "❌ No se seleccionó acción.";
+      datosPendientes.modoEdicion = false;
+      localStorage.setItem("tempDatos", JSON.stringify(datosPendientes));
+      mensaje.style.color = "green";
+      mensaje.textContent = "✅ Redirigiendo a capturar inventario...";
+
+      setTimeout(() => {
+        window.location.href = `${area.toLowerCase()}.html`;
+      }, 800);
     }
-  } else {
-    datosPendientes.modoEdicion = false;
-    localStorage.setItem("tempDatos", JSON.stringify(datosPendientes));
-    window.location.href = `${area.toLowerCase()}.html`;
+
+  } catch (error) {
+    console.error(error);
+    mensaje.style.color = "red";
+    mensaje.textContent = "❌ Error de conexión al servidor.";
+  } finally {
+    loader.style.display = "none";
   }
 });
+
+// Función regresar
+function regresar() {
+  window.location.href = "index.html";
+}
 </script>
 
 </body>
