--- a/public/editar-item.html
+++ b/public/editar-item.html
@@ -5,130 +5,106 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Editar Artículo</title>
   <style>
-    body { font-family: Arial, sans-serif; text-align: center; margin: 30px; }
-    form { background: #f9f9f9; padding: 20px; border: 1px solid #ccc; border-radius: 10px; display: inline-block; width: 100%; max-width: 400px; }
-    input, button, label { width: 90%; padding: 10px; margin: 10px 0; font-size: 16px; border-radius: 5px; border: 1px solid #ccc; }
-    button { background-color: #e74c3c; color: white; cursor: pointer; border: none; }
-    button:hover { background-color: #c0392b; }
-    #mensaje { margin-top: 20px; font-size: 16px; }
-    .footer { margin-top: 40px; font-size: 12px; color: gray; }
-    #loader { display: none; margin-top: 15px; font-size: 14px; color: #555; }
-    @media (max-width: 600px) {
-      form { width: 95%; }
-      input, button, label { font-size: 14px; }
-    }
+    body {font-family: Arial, sans-serif; text-align: center; margin: 30px;}
+    form {display: inline-block; background: #f9f9f9; padding: 20px; border: 1px solid #ccc; border-radius: 10px; width: 100%; max-width: 400px;}
+    input, select, button {width: 90%; padding: 10px; margin: 10px 0; font-size: 16px; border-radius: 5px; border: 1px solid #ccc;}
+    button {background-color: #3498db; color: white; cursor: pointer; border: none;}
+    button:hover {background-color: #2980b9;}
+    #mensaje {margin-top: 20px; font-size: 16px;}
+    footer {margin-top: 40px; font-size: 12px; color: gray;}
   </style>
 </head>
 <body>
 
-<h2>Editar Artículo ✏️</h2>
-
-<div id="loader">Cargando datos, por favor espera...</div>
+<h2>Editar Artículo</h2>
 
 <form id="formulario-editar">
-  <div id="articuloInfo"></div>
-  <input type="number" id="nuevaCantidad" placeholder="Nueva Cantidad" required min="0">
-  <div>
-    <label>
-      <input type="checkbox" id="nuevoSolicito">
-      Solicitar
-    </label>
-  </div>
+  <input type="number" id="cantidad" placeholder="Cantidad" required><br>
+  <label>
+    <input type="checkbox" id="solicito"> Solicitar
+  </label><br>
   <button type="submit">Guardar Cambios</button>
-  <button type="button" onclick="regresar()" style="background-color: gray;">Cancelar</button>
+  <button type="button" onclick="cancelar()" style="background-color:#e74c3c;">Cancelar</button>
 </form>
 
 <div id="mensaje"></div>
 
 <footer>
-  Aplicación para administración de inventarios para PYMES — Alejandro Ornelas Orom Soluciones
+  Aplicación para administración de inventarios para PYMES — Alejandro Ornelas — Orom Soluciones
 </footer>
 
 <script>
-const SERVER = "https://inventario-horom-production.up.railway.app";
-
-// Validar login
-if (!localStorage.getItem("usuarioLogueado")) {
-  window.location.href = "login.html";
-}
-
+const server = "https://inventario-horom-production.up.railway.app";
 const datosPendientes = JSON.parse(localStorage.getItem("tempDatos"));
-if (!datosPendientes || !datosPendientes.id || !datosPendientes.articulo) {
-  alert("❌ No se encontraron datos del artículo a editar.");
-  window.location.href = "index.html";
+
+if (!localStorage.getItem("usuarioLogueado")) {
+  location.href = "index.html";
 }
 
-// Mostrar nombre de artículo
-document.getElementById("articuloInfo").innerHTML = `<strong>Artículo:</strong> ${datosPendientes.articulo}`;
-
-// Cargar datos actuales
-async function cargarActual() {
-  const loader = document.getElementById("loader");
-  loader.style.display = "block";
-  try {
-    const res = await fetch(`${SERVER}/nombres`);
-    const inventarios = await res.json();
-    const inventario = inventarios.find(inv => inv._id === datosPendientes.id);
-
-    if (inventario && inventario.articulos && inventario.articulos[datosPendientes.articulo]) {
-      const valor = inventario.articulos[datosPendientes.articulo];
-      const partes = valor.split('|').map(x => x.trim());
-      const cantidadActual = partes[0] || "0";
-      const solicitoActual = (partes[1] || "").includes("Si");
-
-      document.getElementById("nuevaCantidad").value = cantidadActual;
-      document.getElementById("nuevoSolicito").checked = solicitoActual;
-    }
-  } catch (error) {
-    console.error(error);
-    document.getElementById("mensaje").textContent = "❌ Error al cargar datos actuales.";
-  } finally {
-    loader.style.display = "none";
-  }
-}
-cargarActual();
-
-// Guardar cambios
-document.getElementById("formulario-editar").addEventListener("submit", async (e) => {
-  e.preventDefault();
-
-  const nuevaCantidad = document.getElementById("nuevaCantidad").value.trim();
-  const nuevoSolicito = document.getElementById("nuevoSolicito").checked ? "Si" : "No";
-
-  if (nuevaCantidad === "") {
-    alert("❌ No puedes dejar cantidad vacía.");
+async function cargarDatosArticulo() {
+  if (!datosPendientes || !datosPendientes.articulo) {
+    document.getElementById("mensaje").textContent = "❌ No hay artículo para editar.";
     return;
   }
 
   try {
-    await fetch(`${SERVER}/editar-articulo/${datosPendientes.id}`, {
+    const res = await fetch(`${server}/nombres`);
+    const inventarios = await res.json();
+    const inventario = inventarios.find(i => i._id === datosPendientes.id);
+
+    if (inventario && inventario.articulos && inventario.articulos[datosPendientes.articulo]) {
+      const datos = inventario.articulos[datosPendientes.articulo].split('|').map(x => x.trim());
+      document.getElementById("cantidad").value = datos[0] || "";
+      if (datos[1] && datos[1].includes("Si")) {
+        document.getElementById("solicito").checked = true;
+      }
+    }
+
+  } catch (error) {
+    console.error("Error al cargar artículo:", error);
+  }
+}
+
+cargarDatosArticulo();
+
+document.getElementById("formulario-editar").addEventListener("submit", async function(e) {
+  e.preventDefault();
+  const nuevaCantidad = document.getElementById("cantidad").value;
+  const nuevoSolicito = document.getElementById("solicito").checked ? "Si" : "No";
+  const mensaje = document.getElementById("mensaje");
+
+  if (nuevaCantidad === "") {
+    mensaje.style.color = "red";
+    mensaje.textContent = "❌ Debes capturar una cantidad.";
+    return;
+  }
+
+  try {
+    await fetch(`${server}/editar-articulo/${datosPendientes.id}`, {
       method: "PUT",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({
         articulo: datosPendientes.articulo,
         cantidad: `${nuevaCantidad} | Solicito: ${nuevoSolicito}`,
-        usuario: localStorage.getItem("usuarioLogueado")
+        usuario: localStorage.getItem("usuarioLogueado"),
+        fechaHora: localStorage.getItem("fechaServidor")
       })
     });
 
-    document.getElementById("mensaje").style.color = "green";
-    document.getElementById("mensaje").textContent = "✅ Artículo actualizado exitosamente.";
+    mensaje.style.color = "green";
+    mensaje.textContent = "✅ Artículo actualizado correctamente.";
 
-    // Actualizar inventarios abiertos
     localStorage.setItem("actualizarInventario", "true");
-
-    setTimeout(() => {
-      window.location.href = "index.html";
-    }, 1000);
+    setTimeout(() => window.location.href = "index.html", 1000);
 
   } catch (error) {
     console.error(error);
-    document.getElementById("mensaje").style.color = "red";
-    document.getElementById("mensaje").textContent = "❌ Error al guardar cambios.";
+    mensaje.style.color = "red";
+    mensaje.textContent = "❌ Error al actualizar artículo.";
   }
 });
 
-function regresar() {
+function cancelar() {
   window.location.href = "index.html";
 }
 </script>
